# serializer version: 1
# name: TestPositionZeroingSequence.test_zeroing_sequence_pool_from_position[event]
  dict({
    1: Timestamp('2023-02-28 00:00:00'),
    2: Timestamp('2023-02-24 00:00:00'),
    3: Timestamp('2023-02-10 00:00:00'),
    4: Timestamp('2023-04-06 00:00:00'),
    5: Timestamp('2023-02-23 00:00:00'),
    6: Timestamp('2023-04-22 00:00:00'),
    7: Timestamp('2023-04-22 00:00:00'),
    8: Timestamp('2023-06-10 00:00:00'),
    9: Timestamp('2023-07-07 00:00:00'),
    10: Timestamp('2023-06-10 00:00:00'),
  })
# ---
# name: TestPositionZeroingSequence.test_zeroing_sequence_pool_from_position[interval]
  dict({
    1: Timestamp('2023-01-20 00:00:00'),
    2: Timestamp('2023-02-04 00:00:00'),
    3: Timestamp('2023-10-10 00:00:00'),
    4: Timestamp('2023-06-11 00:00:00'),
    5: Timestamp('2023-04-22 00:00:00'),
    6: Timestamp('2023-04-02 00:00:00'),
    7: Timestamp('2023-05-13 00:00:00'),
    8: Timestamp('2023-01-28 00:00:00'),
    9: Timestamp('2023-07-31 00:00:00'),
    10: Timestamp('2023-04-11 00:00:00'),
  })
# ---
# name: TestPositionZeroingSequence.test_zeroing_sequence_pool_from_position[state]
  dict({
    1: NaT,
    2: NaT,
    3: Timestamp('2023-12-15 00:00:00'),
    4: Timestamp('2023-07-18 00:00:00'),
    5: NaT,
    6: Timestamp('2023-08-16 00:00:00'),
    7: Timestamp('2023-07-19 00:00:00'),
    8: NaT,
    9: NaT,
    10: NaT,
  })
# ---
# name: TestPositionZeroingSequence.test_zeroing_single_sequence_from_position[event]
  np.datetime64('2023-02-10T00:00:00.000000000')
# ---
# name: TestPositionZeroingSequence.test_zeroing_single_sequence_from_position[interval]
  np.datetime64('2023-10-10T00:00:00.000000000')
# ---
# name: TestPositionZeroingSequence.test_zeroing_single_sequence_from_position[state]
  np.datetime64('2023-12-15T00:00:00.000000000')
# ---
